<resources>
    <string name="app_name">RestoPresto2</string>
    <string name="bouton_infos">Infos</string>
    <string name="bouton_commander">Commander</string>
    <string name="bouton_reserver">Réserver</string>
    <string name="bouton_menus">Menus</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="restos">
        <item>Le dey</item>
        <item>Lalla Mina</item>
        <item>El Djenina</item>
        <item>Palmeraie</item>
        <item>ElDjazair</item>
    </string-array>
    <string-array name="notes">
        <item>★★★✩</item>
        <item>★★★★</item>
        <item>★✩✩✩</item>
        <item>★★✩✩</item>
        <item>★★★✩</item>
    </string-array>
    <string-array name="menujour">
        <item>Salade mechouia\n
        Chorba\n
        Mhelbi\n
        Thé
        </item>
        <item>Salade césar\n
        Hrira\n
        Makrout\n
        Thé ou café
        </item>
        <item>Tadjine Jben\n
        Chorba\n
        Tamina\n
        Thé ou café
        </item>
        <item>Salade mechouia\n
        Tadjine zitoune\n
        Fruits de saison\n
        Thé, café ou jus nature
        </item>
        <item>Bourek\n
        Chorba\n
        Fruits de saison\n
        Thé
        </item>
    </string-array>
    <string-array name="platsbinaire">
        <item>Chakhchoukha speciale</item>
        <item>Tajine Zitoune</item>
        <item>Loubia</item>
        <item>Zfitti</item>
        <item>Kebda mcharmla</item>
    </string-array>
    <string-array name="ingredientsbinaire">

        <item>Chakhchoukha, part de viande/poulet au choix </item>
        <item>Olives, champignons, part de poulet/viande</item>
        <item>Loubia, part de viande</item>
        <item>Zfitti </item>
        <item>Kebda à la sauce rouge</item>

    </string-array>
    <string-array name="prixbinaire">
        <item>600 </item>
        <item>250</item>
        <item>150</item>
        <item>200</item>
        <item>500</item>
    </string-array>
    <string-array name="entreesbinaire">
        <item>Salade de piment</item>
        <item>Bourek</item>
        <item>Salade variée</item>
        <item>Hors d\'oeuvre</item>
        <item>Salade de riz</item>
    </string-array>
    <string-array name="ingredientsentreebinaire">
        <item>Piment mechoui, Huile d\'olive</item>
        <item>Dioul, Viande hachée (ou poulet),Fromage</item>
        <item>Salade verte, Tomate, Carottes, Olives</item>
        <item>Légumes cuits à la vapeur, mayonnaise</item>
        <item>Riz, légumes, assaisonnement</item>
    </string-array>
    <string-array name="dessertsbinaire">
        <item>Mhelbi</item>
        <item>Makrout</item>
        <item>Tamina</item>
        <item>Glace</item>
        <item>Fruits</item>
    </string-array>
    <string-array name="ingredientsdessertbinaire">
        <item>Riz, lait, sucre, vanille</item>
        <item>Gateaux à la semoule et aux dattes enrobés de miel</item>
        <item>Semoule torréfié accomodé de miel</item>
        <item>Boules de glace au choix (selon la disponibilité)</item>
        <item>Fruits de saison</item>
    </string-array>


    <string-array name="plats">
        <item>Chakhchoukha speciale</item>
        <item>Tajine Zitoune</item>
        <item>Loubia</item>
        <item>Zfitti</item>
        <item>Kebda mcharmla</item>
        <item>Chakhchoukha speciale</item>
        <item>Tajine Zitoune</item>
        <item>Loubia</item>
        <item>Zfitti</item>
        <item>Kebda mcharmla</item>

    </string-array>
    <string-array name="ingredients">

        <item>Chakhchoukha, part de viande/poulet au choix </item>
        <item>Olives, champignons, part de poulet/viande</item>
        <item>Loubia, part de viande</item>
        <item>Zfitti </item>
        <item>Kebda à la sauce rouge</item>
        <item>Chakhchoukha, part de viande/poulet au choix </item>
        <item>Olives, champignons, part de poulet/viande</item>
        <item>Loubia, part de viande</item>
        <item>Zfitti </item>
        <item>Kebda à la sauce rouge</item>

    </string-array>
    <string-array name="prix">
        <item>600 </item>
        <item>250</item>
        <item>150</item>
        <item>200</item>
        <item>500</item>
        <item>600 </item>
        <item>250</item>
        <item>150</item>
        <item>200</item>
        <item>500</item>
    </string-array>

    <!-- Plats diabet -->
    <string-array name="plats_diabet">
        <item> plat diabet 1 </item>
        <item> plat diabet 2 </item>
        <item> plat diabet 3 </item>
        <item> plat diabet 4 </item>
    </string-array>
    <string-array name="ingredients_diabet">
        <item>ingredients diabet 1 </item>
        <item>ingredients diabet 2 </item>
        <item>ingredients diabet 3 </item>
        <item>ingredients diabet 4 </item>
    </string-array>
    <string-array name="prix_diabet">
        <item>600 </item>
        <item>250</item>
        <item>150</item>
        <item>200</item>
    </string-array>
    <!-- Plats vegetarien -->
    <string-array name="plats_vegetarien">
        <item> plat vegetarien1 </item>
        <item> plat vegetarien2 </item>
        <item> plat vegetarien 3 </item>
        <item> plat vegetarien 4 </item>
    </string-array>

    <string-array name="ingredients_vegetarien">
        <item>ingredients vegetarien 1 </item>
        <item>ingredients vegetarien 2 </item>
        <item>ingredients vegetarien 3 </item>
        <item>ingredients vegetarien 4 </item>
    </string-array>
    <string-array name="prix_vegetarien">
        <item>1600 </item>
        <item>2150</item>
        <item>1150</item>
        <item>1200</item>
    </string-array>
    <string-array name="adresses">
        <item>Rue Petites Provinces Hydra</item>
        <item>54 Rue Didouche Mourad, Alger 16000</item>
        <item>Rue Didouche Mourad Algiers 16000</item>
        <item>Villa N° 308,Coopérative El-Moustakbel Route AIN ALLAH, Dely Ibrahim</item>
        <item>Rue Emile ZOLA Algiers 16000</item>
    </string-array>

    <string-array name="emails">
        <item>Ledey@gmail.com</item>
        <item>LallaMina@gmail.com</item>
        <item>ElDjenina@gmail.com</item>
        <item>Palmeraie@gmail.com</item>
        <item>ElDjazair@gmail.com</item>
    </string-array>
    <string-array name="numeros">
        <item>0556716623</item>
        <item>0556716623</item>
        <item>0556716623</item>
        <item>0556716623</item>
        <item>0556716623</item>
    </string-array>
    <string-array name="descriptions">
        <item>Restaurant traditionnel algérien, fondé en 1935, il offre depuis de délicieux plats préparés avec soin par leurs cuisiniers professionnels formés dans les plus grandes écoles d\'hôtelerie.</item>
        <item>Restaurant traditionnel algérien, fondé en 1935, il offre depuis de délicieux plats préparés avec soin par leurs cuisiniers professionnels formés dans les plus grandes écoles d\'hôtelerie.</item>
        <item>Restaurant traditionnel algérien, fondé en 1935, il offre depuis de délicieux plats préparés avec soin par leurs cuisiniers professionnels formés dans les plus grandes écoles d\'hôtelerie.</item>
        <item>Restaurant traditionnel algérien, fondé en 1935, il offre depuis de délicieux plats préparés avec soin par leurs cuisiniers professionnels formés dans les plus grandes écoles d\'hôtelerie.</item>
        <item>Restaurant traditionnel algérien, fondé en 1935, il offre depuis de délicieux plats préparés avec soin par leurs cuisiniers professionnels formés dans les plus grandes écoles d\'hôtelerie.</item>
    </string-array>
    <string-array name="latitudes">
        <item>36.740114</item>
        <item>36.767676</item>
        <item>36.761651</item>
        <item>36.754076</item>
        <item>36.772497</item>
    </string-array>
    <string-array name="longitudes">
        <item>3.034452</item>
        <item>3.052560</item>
        <item>3.047574</item>
        <item>2.994754</item>
        <item>3.057716</item>
    </string-array>
    <string-array name="plat_cmd">
        <item>Chakhchoukha speciale</item>
        <item>Tajine Zitoune</item>
        <item>Loubia</item>
    </string-array>
    <string-array name="prix_cmd">
        <item>600 </item>
        <item>250</item>
        <item>500</item>
    </string-array>
    <string-array name="nb_cmd">
        <item>2</item>
        <item>1</item>
        <item>4</item>
    </string-array>
    <string-array name="facebooks" />
    <string-array name="twitters" />
    <string name="formule1">Entrée\n+\nPlat</string>
    <string name="formule2">Plat\n+\nDessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="titreliste">Liste des restaurants</string>
    <string name="bouton_menujour">Menu du jour</string>
    <string name="title_activity_formule_binaire">Formules Binaires</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_les_menus">LesMenusActivity</string>
    <string name="menu_normal">Menu normal</string>
    <string name="menu_diabet">Diabétique</string>
    <string name="menu_vegetarien">Végétarien</string>
    <string name="bundle_key">AIzaSyAt3VyyGP44oFn_5RCEjvVXbG93E8b80nM</string>
    <string name="title_activity_tab_navigation">TabNavigationActivity</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Adresse mail introduite est fausse</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est eronné</string>
    <string name="error_field_required">Ce champs est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
