<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
  <!--android:background="@drawable/restaurant_floue"-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.android.com.myapplication.RestaurantFragment"

    >


    <ImageView
        android:id="@+id/imagedetail"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#8888"
        android:fontFamily="casual"
        android:paddingLeft="10dp"
        android:text="NomResto"
        android:textColor="@color/colorBouton"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagedetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagedetail"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/menus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bouton_arrondi_blanc"
        android:drawableTop="@drawable/ic_import_contacts_black_48dp"
        android:textColor="@color/colorAccent"
        android:elevation="10dp"
        android:text="@string/bouton_menus"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.Button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/infos"
        app:layout_constraintTop_toBottomOf="@+id/menujour" />

    <Button
        android:id="@+id/reserve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bouton_arrondi_blanc"
        android:drawableTop="@drawable/ic_today_black_48dp"
        android:textColor="@color/colorAccent"
        android:elevation="10dp"
        android:text="@string/bouton_reserver"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.Button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/commande"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/infos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bouton_arrondi_blanc"
        android:drawableTop="@drawable/ic_info_outline_black_48dp"
        android:textColor="@color/colorAccent"
        android:elevation="10dp"
        android:text="@string/bouton_infos"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.Button"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/menus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menujour" />

    <Button
        android:id="@+id/commande"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bouton_arrondi_blanc"
        android:drawableTop="@drawable/ic_phone_in_talk_black_48dp"
        android:textColor="@color/colorAccent"
        android:elevation="10dp"
        android:text="@string/bouton_commander"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.Button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reserve"
        app:layout_constraintTop_toBottomOf="@+id/menus"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/menujour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bouton_arrondi"
        android:drawableTop="@drawable/ic_restaurant_menu_white_24dp"
        android:elevation="10dp"
        android:text="@string/bouton_menujour"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.Button"
        android:textColor="@color/colorBouton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomdetail" />

</android.support.constraint.ConstraintLayout>
</ScrollView>